--- a/scss/components/pages/_mainHome.scss
+++ b/scss/components/pages/_mainHome.scss
@@ -38,14 +38,14 @@
             left: 50%;
             transform: translate(-50%, -50%);
             // width: 100%;
-            // line-height: 3.5em;
+            line-height: 3.5em;
 
             p{
                 font-size: 1em;
             }
 
             h1{
-                // font-size: 5em;
+                font-size: 5em;
                 font-family: $Homefont;
                 font-weight: bolder;
             }
