--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -264,6 +264,7 @@ header{
                                     // margin-top: -3em;
                                     // margin-left: -1.5em;
                                     font-family: $discographyfont;
+                                    transition: 4s ease-out;
                                 }
                             }
                         }
