--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,6 +1,6 @@
 header{
     width: 55px;
-    height: 100%;  
+    // height: 100%;  
 }
 
 .menu_btn{
@@ -13,6 +13,7 @@ header{
     width: 80px;
     height: 80px;
     cursor: pointer;
+
 
     
     &__burger{
@@ -88,7 +89,7 @@ header{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 10%;
     opacity: 1;
     visibility: hidden;
 
