--- a/scss/components/pages/_mainMembers.scss
+++ b/scss/components/pages/_mainMembers.scss
@@ -32,10 +32,12 @@
             }
         
             &__number{
-                position: absolute;
+                position: fixed;
                 width: 97%;
+                z-index: -2;
                 text-align: right;
-                margin-top: -5%;
+                margin-top: -0.75em;
+                // margin-top: -5%;
                 font-size: 8em;
                 opacity: 0.1;
                 
@@ -52,19 +54,21 @@
             width: 50vw;
             transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
 
-            img{
-                transition: all 5s ease-in-out;
-            
-                // &:hover {
-                //     transform: none;
-                //     transition: all 5s ease-in-out;
-                // }
-            }
+            // span{
+            //     transition: all 5s ease-in-out;
+            //     width: 50vw;
+            //     height: 100vh;
+            //     object-fit: cover; 
+            //     // &:hover {
+            //     //     transform: none;
+            //     //     transition: all 5s ease-in-out;
+            //     // }
+            // }
 
             &__image{
                 position: absolute;
-                width: 50vw;
-                height: 100vh;
+                width: 100%;
+                height: 100%;
                 object-fit: cover; 
                 transition: all 1s cubic-bezier(0.1, 0.7, 1.0, 0.1);
             } 
@@ -93,10 +97,11 @@
     
         &__info{
             position: relative;
-            width: 100%;
+            z-index: -1;
+            // width: 100%;
             // width: 40%;
             right: 5%;
-            top: 30%;
+            bottom: -30%;
             text-align: right;
             color: black;
             // background-color: #000;
