--- a/scss/components/pages/_mainProfile.scss
+++ b/scss/components/pages/_mainProfile.scss
@@ -588,7 +588,7 @@
             margin-top: 20%;
             height: 50em;
             width: 100%;
-            background-color: palegoldenrod;
+            // background-color: palegoldenrod;
 
             &__title{
                 &::before{
@@ -735,7 +735,7 @@
                     // position: relative;
                     margin-top: 5em;
                     margin-left: 3em;
-                    background: url("../../../images/members/jeonghan_attacca_op1.jpg") no-repeat fixed;
+                    background: url("../../../images/home_page/pol/pol_3.jpeg") no-repeat fixed center;
                     background-size: cover;
                     background-blend-mode: saturation;
                     width: 25em;
